--- a/nftickets-ui/styles/globals.css
+++ b/nftickets-ui/styles/globals.css
@@ -16,9 +16,9 @@ a {
 }
 
 .row {
-  margin-bottom: 40px;
+  margin: 20px 0;
 }
 
 .form-group {
-  margin-bottom: 10px;
+  margin-bottom: 5px 0;
 }
